# zemljanichka-homework-5

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main-competition.cpp  main-game.cpp  main-human.cpp
.github/workflows/: cpp.yml
game/: CMakeLists.txt  field.cpp  field.h  sea-battle.cpp  sea-battle.h
players/: CMakeLists.txt  human-player.cpp  human-player.h  player-interface.h  simple-ai-player.cpp  simple-ai-player.h  smart-ai-player.cpp  smart-ai-player.h
scripts/: apply-fixes.py  build.py  init-pr.py  run-tests.py  utils.py
testing/: CMakeLists.txt  CMakeLists.txt.in  mock-player-data.cpp  mock-player-data.h  mock-player.cpp  mock-player.h  simple-simple.test  simple-smart.test  smart-simple.test  smart-smart.test
